0.5.1 (currently working on)
- [#941] The displayed total price is 0 if the "price" field is not in showRegistrationFields
- [#950] Fix: Call time pass by reference warnings
- [#956] Fix: $MCONF is used uninitialized in mod1 and mod2
- [#952] Fix: Set FORMidable max version to 0.7.0
- [#831] Fix: Red warning during registration
- [#935] Change: Add @author, @package and @subpackage tags to all PHP classes
- [#906] Fix: FE-Editing of events: foods and lodgings need multi-selection
- [#776] Fix: Call $GLOBALS["TSFE"]->fe_user->storeSessionData() after storing data in the session
- [#573] Fix: Typo in comments: "ommit"
- [#925] Fix: The square brackets in URLs in e-mails need to be encoded
- [#901] Fix: SQL error when visiting mod2 directly after login
- [#409] Change: Check the SQL file: all uids and references to them need to be *unsigned* ints
- [#898] Fix: Typo in the German translation of "special price including boarding"
- [#883] Fix: Fix the CSS in the mod2 lists for Safari
- [#853] Change: Remove end-of-file newlines from XML files

0.5.0 (released 2007-06-29)
- Change: Hide the time slots from BE for the 0.5.0 branch (#866)
- Fix: On the confirmation page, the selected price and the payment method are not displayed (#893)
- Fix: redirect_url is wrong when used with realUrl, initial patch by Sinian Zhang (#894)
- Feature: Add a headline to the registration form: "Registration form: step x of y" (#830)
- Fix: FORMidable mayday message on page 2 of the registration form (#891)
- Change: The terms checkbox now isn't required anymore for the two-step registration form (#374)
- Fix: mod2: some member variables are used, but not declared (#889)
- Change: Split mod2/index.php to several classes (#888)
- Change: Allow to send e-mails as ISO-8859-1 instead of UTF-8 (#881)
- Change: Move the checkboxes, the lodging options and the food options to the first registration page (#564)
- Fix: Ensure TYPO3 3.8.1 compatibility (#857)