@@ -1,4 +1,5 @@
 0.5.1 (currently working on)
+- [#953] Change: Define LF as chr(10) and use that instead of chr(10)
 - [#941] The displayed total price is 0 if the "price" field is not in showRegistrationFields
 - [#950] Fix: Call time pass by reference warnings
 - [#956] Fix: $MCONF is used uninitialized in mod1 and mod2
